--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -18,5 +18,5 @@ services:
     image: postgres:14-alpine
     environment:
       - POSTGRES_DB=testdb
-      - POSTGUSER=user
+      - POSTGRES_USER=user
       - POSTGRES_PASSWORD=password
