--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Run tests
-        run: docker compose -f docker-compose.test.yml up --build --abort-on-container-exit
+        run: docker compose -f docker-compose.test.yml ыup --build --abort-on-container-exit
 
       - name: Login to Docker Hub
         uses: docker/login-action@v2
